# SC-Factory

./: .gitignore  README.md
charity-sc/: Cargo.toml
charity-sc-factory/: Cargo.toml
charity-sc-factory/interactor/: Cargo.toml
charity-sc-factory/interactor/src/: interact.rs  interactor_main.rs  proxy.rs
charity-sc-factory/meta/: Cargo.toml
charity-sc-factory/meta/src/: main.rs
charity-sc-factory/src/: charity_sc_factory.rs
charity-sc/interactor/: Cargo.toml
charity-sc/interactor/src/: interact.rs  interactor_main.rs  proxy.rs
charity-sc/meta/: Cargo.toml
charity-sc/meta/src/: main.rs
charity-sc/src/: charity_sc.rs
project-sc/: .gitignore  Cargo.toml
project-sc/interactor/: Cargo.toml
project-sc/interactor/src/: interact.rs  interactor_main.rs  proxy.rs
project-sc/meta/: Cargo.toml
project-sc/meta/src/: main.rs
project-sc/src/: project_sc.rs
